Fixed contrast error

--- a/styles/stylePlaylist.css
+++ b/styles/stylePlaylist.css
@@ -28,7 +28,7 @@
         padding: 10px 20px;
         font-size: 16px;
         background-color: #1DB954;
-        color: white;
+        color: black;
         text-decoration: none;
         border-radius: 5px;
         margin-top: 20px;
